[tool.poetry]
name = "portan"
version = "0.1.0"
description = ""
authors = ["Vincent Labelle <vetches_canto_0s@icloud.com>"]

[tool.poetry.dependencies]
python = "~3.9"
yfinance = "^0.1.63"
osqp = "^0.6.2"
numpy = "^1.21.3"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.0"
black = "^21.7b0"
isort = "^5.9.3"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
Sphinx = "^4.2.0"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
